<resources>
    <!-- TITLE -->
    <string name="app_name">Card Counter</string>

    <!-- MENU -->
    <string name="play_button">Play</string>
    <string name="score_button">Scores</string>
    <string name="exit_button">Exit</string>

    <!-- KEYBOARD -->
    <string name="num0_button">0</string>
    <string name="num1_button">1</string>
    <string name="num2_button">2</string>
    <string name="num3_button">3</string>
    <string name="num4_button">4</string>
    <string name="num5_button">5</string>
    <string name="num6_button">6</string>
    <string name="num7_button">7</string>
    <string name="num8_button">8</string>
    <string name="num9_button">9</string>
    <string name="num_delete_button">Del</string>
    <string name="num_confirm_button">OK</string>
    <string name="num_negative_button">-</string>

    <!-- GAME MESSAGE -->
    <string name="result_ok">Well done!</string>
    <string name="result_wrong">You are wrong!</string>
    <string name="lives_left">You have %1$d lives left!</string>
    <string name="show_score">Score: %1$d</string>

    <!-- DIALOG -->
    <string name="cancel_save">Cancel</string>
    <string name="confirm_save">Save</string>
    <string name="alert_cancel">Score not saved</string>
    <string name="alert_confirm">Score saved</string>

    <!-- SCORE -->
    <string name="high_score_header">High Score</string>
    <string name="normal_score_header">Score</string>

</resources>
