<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/dark_blue"
    tools:context="parohyapps.cardcounter.PlayActivity">

    <TextView
        android:id="@+id/game_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="Hello World!"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/equation_view"
        android:layout_above="@+id/equation_view"
        android:textSize="20sp"
        android:text="5"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/equation_view"
        android:layout_above="@+id/equation_view"
        android:textSize="20sp"
        android:text="5"/>

    <LinearLayout
        android:id="@+id/equation_view"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_message"
        android:layout_centerHorizontal="true">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="120dp"
            android:src="@drawable/c2_of_clubs"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <ImageView
            android:layout_width="70dp"
            android:layout_height="120dp"
            android:src="@drawable/c2_of_clubs"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/input_view"
        android:layout_above="@+id/keyboard_view"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="test test"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <GridLayout
        android:id="@+id/keyboard_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:columnCount="4"
        android:rowCount="4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="0"
            android:layout_row="0"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num_delete_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="0"
            android:layout_row="1"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num_confirm_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="0"
            android:layout_row="2"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num_negative_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="1"
            android:layout_row="0"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num1_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="2"
            android:layout_row="0"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num2_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="3"
            android:layout_row="0"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num3_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="1"
            android:layout_row="1"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num4_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="2"
            android:layout_row="1"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num5_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="3"
            android:layout_row="1"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num6_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="1"
            android:layout_row="2"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num7_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="2"
            android:layout_row="2"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num8_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="3"
            android:layout_row="2"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num9_button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/keyboard_button"
            android:textColor="@color/yellow"
            android:layout_column="2"
            android:layout_row="3"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:text="@string/num0_button"/>
    </GridLayout>

</RelativeLayout>
